white space bug due to chrome presets changed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,13 @@ body,
   width: 100%;
   font-family: 'Rubik', sans-serif;
 }
+
+/* body{
+  background: grey;
+} */
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ }
